# pyproject.toml

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "neo4j-backup"
version = "0.2.0"
description = "A simple way to backup and restore Neo4j databases without using dump files."
readme = "README.md"
authors = [{ name = "Andres Hyer", email = "andreshyer@gmail.com" }]
license = { file = "Apache Software License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
keywords = ["neo4j"]
dependencies = [
    "neo4j>=4.3.0",
    "tqdm>=4.10.0",
]
requires-python = ">=3.5"

[project.urls]
Homepage = "https://github.com/andreshyer/neo4j-backup"


[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
    "{pep440_version}",
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

